--- a/MasterPage.master
+++ b/MasterPage.master
@@ -17,7 +17,7 @@
 	 
 	 <ul class="top-info-nav">
 		 <li><a href="#" id="lnk-home">设为首页</a></li>
-         <li><a href="#" id="manerge">管理登录</a></li>
+         <li><a href="index.aspx" id="manerge">管理登录</a></li>
 	 </ul>
 	</div>
 </div>
